@@ -1,5 +1,5 @@
 Package: grImport2
-Version: 0.1-1
+Version: 0.1-2
 Depends: R (>= 2.12.0)
 Imports: methods, grid, XML, png, jpeg, base64enc
 Suggests: gridSVG, grConvert, grImport, lattice, cluster, colorspace, survival
